force-app/main/default/objects/SC_GeminiConnectionSettings__c/SC_GeminiConnectionSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SC Gemini Connection Settings</label>
</CustomObject>