force-app/main/default/objects/SC_GeminiConnectionSettings__c/fields/Token_3__c.field-meta.xml
<CustomField>
    <fullName>Token_3__c</fullName>
    <label>Token_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>