force-app/main/default/objects/SC_GeminiConnectionSettings__c/fields/Token_5__c.field-meta.xml
<CustomField>
    <fullName>Token_5__c</fullName>
    <label>Token_5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>