force-app/main/default/objects/SC_GeminiConnectionSettings__c/fields/Token_6__c.field-meta.xml
<CustomField>
    <fullName>Token_6__c</fullName>
    <label>Token_6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>